--- a/CookSmart/Views/Base.lproj/Main.storyboard
+++ b/CookSmart/Views/Base.lproj/Main.storyboard
@@ -1,14 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Niz-5m-9id">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="on9-ry-W4K">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Sign In View Controller-->
+        <scene sceneID="SZ6-N8-WHQ">
+            <objects>
+                <viewController id="on9-ry-W4K" customClass="SignInViewController" customModule="CookSmart" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3ng-m2-SRh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hyc-2Q-Ddc">
+                                <rect key="frame" x="20" y="214" width="374" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Djd-tb-dvz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zTq-Gk-qVC">
+                                <rect key="frame" x="20" y="284" width="374" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="pV5-Yq-rih"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dIs-cC-4L7">
+                                <rect key="frame" x="20" y="354" width="374" height="35"/>
+                                <color key="tintColor" name="ColorOrang"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Sign in">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="17"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="butttonSignInTapped:" destination="on9-ry-W4K" eventType="touchUpInside" id="pBM-cT-dWv"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b3h-3Z-LOm">
+                                <rect key="frame" x="20" y="409" width="374" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OcW-yJ-AcS">
+                                        <rect key="frame" x="10" y="6" width="161" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TZR-GW-HVh">
+                                        <rect key="frame" x="171" y="-1" width="161.5" height="32"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Create new account">
+                                            <fontDescription key="titleFontDescription" type="system" pointSize="15"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="TZR-GW-HVh" firstAttribute="leading" secondItem="OcW-yJ-AcS" secondAttribute="trailing" id="LMS-Pa-t6M"/>
+                                    <constraint firstItem="OcW-yJ-AcS" firstAttribute="centerY" secondItem="b3h-3Z-LOm" secondAttribute="centerY" id="PbJ-GE-tsx"/>
+                                    <constraint firstItem="TZR-GW-HVh" firstAttribute="centerY" secondItem="b3h-3Z-LOm" secondAttribute="centerY" id="S3g-Hk-zLq"/>
+                                    <constraint firstItem="OcW-yJ-AcS" firstAttribute="leading" secondItem="b3h-3Z-LOm" secondAttribute="leading" constant="10" id="mgq-6C-vMb"/>
+                                    <constraint firstAttribute="height" constant="30" id="vEa-8l-uU6"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="QLx-gA-xwS"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="dIs-cC-4L7" firstAttribute="leading" secondItem="QLx-gA-xwS" secondAttribute="leading" constant="20" id="8dP-Ur-q2q"/>
+                            <constraint firstItem="QLx-gA-xwS" firstAttribute="trailing" secondItem="b3h-3Z-LOm" secondAttribute="trailing" constant="20" id="N0M-HH-ezY"/>
+                            <constraint firstItem="QLx-gA-xwS" firstAttribute="trailing" secondItem="dIs-cC-4L7" secondAttribute="trailing" constant="20" id="PAd-lP-LRL"/>
+                            <constraint firstItem="QLx-gA-xwS" firstAttribute="trailing" secondItem="zTq-Gk-qVC" secondAttribute="trailing" constant="20" id="VMS-RJ-G1L"/>
+                            <constraint firstItem="b3h-3Z-LOm" firstAttribute="leading" secondItem="QLx-gA-xwS" secondAttribute="leading" constant="20" id="Zef-Tc-BSB"/>
+                            <constraint firstItem="dIs-cC-4L7" firstAttribute="centerX" secondItem="3ng-m2-SRh" secondAttribute="centerX" id="cu1-is-w9P"/>
+                            <constraint firstItem="QLx-gA-xwS" firstAttribute="trailing" secondItem="Hyc-2Q-Ddc" secondAttribute="trailing" constant="20" id="j3D-ay-5AK"/>
+                            <constraint firstItem="dIs-cC-4L7" firstAttribute="top" secondItem="zTq-Gk-qVC" secondAttribute="bottom" constant="20" id="sRs-pj-iA2"/>
+                            <constraint firstItem="zTq-Gk-qVC" firstAttribute="top" secondItem="Hyc-2Q-Ddc" secondAttribute="bottom" constant="20" id="tCy-oS-OXF"/>
+                            <constraint firstItem="Hyc-2Q-Ddc" firstAttribute="leading" secondItem="QLx-gA-xwS" secondAttribute="leading" constant="20" id="tlV-XM-QHM"/>
+                            <constraint firstItem="Hyc-2Q-Ddc" firstAttribute="top" secondItem="QLx-gA-xwS" secondAttribute="top" constant="170" id="xDF-sV-Ccv"/>
+                            <constraint firstItem="b3h-3Z-LOm" firstAttribute="top" secondItem="dIs-cC-4L7" secondAttribute="bottom" constant="20" id="ycz-A7-tc1"/>
+                            <constraint firstItem="zTq-Gk-qVC" firstAttribute="leading" secondItem="QLx-gA-xwS" secondAttribute="leading" constant="20" id="zEb-n9-hTF"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="emailTextField" destination="Hyc-2Q-Ddc" id="40n-at-gFi"/>
+                        <outlet property="passwordTextField" destination="zTq-Gk-qVC" id="4op-s6-Axl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sKP-FN-g29" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-371" y="-583"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="YVe-eB-p7B">
             <objects>
@@ -139,13 +229,13 @@
                                                         <rect key="frame" x="0.0" y="30" width="374" height="32"/>
                                                         <subviews>
                                                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minimumValue="1" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="SNr-lb-pDE">
-                                                                <rect key="frame" x="0.0" y="0.0" width="187" height="32"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="94" height="32"/>
                                                                 <connections>
                                                                     <action selector="stepperPressed:" destination="guV-Hv-JH6" eventType="valueChanged" id="Xfs-P7-EiW"/>
                                                                 </connections>
                                                             </stepper>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SERVINGS" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ola-Wc-OvT">
-                                                                <rect key="frame" x="187" y="0.0" width="187" height="32"/>
+                                                                <rect key="frame" x="94" y="0.0" width="280" height="32"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -698,7 +788,7 @@
                                 <color key="backgroundColor" name="ColorMain"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="IngredientReusableCell" id="fCC-ia-h82" customClass="IngredientCell" customModule="CookSmart" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fCC-ia-h82" id="SCa-dv-3VV">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -973,7 +1063,7 @@
                                 <color key="separatorColor" name="ColorMain"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SelectedMealPlansCellIndentifier" id="Jbk-Il-Nqa">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Jbk-Il-Nqa" id="2Jy-L6-aCQ">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -1136,7 +1226,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="book" catalog="system" width="128" height="102"/>
+        <image name="book" catalog="system" width="128" height="99"/>
         <image name="circleEmpty" width="124.5" height="120.5"/>
         <image name="heart" catalog="system" width="128" height="109"/>
         <image name="lineweight" catalog="system" width="128" height="110"/>
@@ -1145,6 +1235,9 @@
         </namedColor>
         <namedColor name="ColorMain">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="ColorOrang">
+            <color red="1" green="0.81499999761581421" blue="0.3190000057220459" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="ColorOrange">
             <color red="1" green="0.81599998474121094" blue="0.31799998879432678" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
